[gd_scene load_steps=7 format=3 uid="uid://dl0c4nsl7qhsb"]

[ext_resource type="Script" path="res://enemies/ushi_oni/ushi_oni.gd" id="1_ffeu4"]
[ext_resource type="Texture2D" uid="uid://kcuw63fwfujd" path="res://enemies/ushi_oni/ushi_oni.png" id="1_tafmg"]
[ext_resource type="PackedScene" uid="uid://b7rr7bh3betwa" path="res://enemies/ui_elements.tscn" id="3_d22qy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c67ed"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tafmg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bq232"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_isd7e"]
radius = 115.017

[node name="ushi_oni" type="RigidBody2D" groups=["enemy"]]
process_mode = 1
collision_layer = 6
collision_mask = 0
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_ffeu4")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c67ed")

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_bq232")

[node name="nav_agent" type="NavigationAgent2D" parent="."]
target_desired_distance = 50.0

[node name="ui_elements" parent="." instance=ExtResource("3_d22qy")]

[node name="anim_timer" type="Timer" parent="."]
wait_time = 1.5

[node name="detection_area" type="Area2D" parent="."]

[node name="detection_shape" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_isd7e")
debug_color = Color(1, 0, 0, 0.419608)

[connection signal="enemy_killed" from="." to="." method="_on_enemy_killed"]
[connection signal="timeout" from="anim_timer" to="." method="_on_anim_timer_timeout"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
